Basic boiler plate for collection queries
