# snapdragon/dashboard-restapi/api/controllers/collections.js
@@ -25,7 +25,8 @@ var util = require('util');
   we specify that in the exports of this module that 'hello' maps to the function named 'hello'
  */
 module.exports = {
-  hello: hello
+  getCollectionNames: getCollectionNames,
+  getCollection: getCollection
 };
 
 /*
@@ -34,11 +35,27 @@ module.exports = {
   Param 1: a handle to the request object
   Param 2: a handle to the response object
  */
-function hello(req, res) {
-  // variables defined in the Swagger document can be referenced using req.swagger.params.{parameter_name}
-  var name = req.swagger.params.name.value || 'stranger';
-  var hello = util.format('Hello, %s!', name);
+function getCollectionNames(req, res) {
+  var collections = ["test_db", "test_db2", "wtf_db"];
+  res.json({collections: collections});
+}
 
-  // this sends back a JSON response which is a single string
-  res.json(hello);
+/*
+Functions in a127 controllers used for operations should take two parameters:
+
+Param 1: a handle to the request object
+Param 2: a handle to the response object
+*/
+function getCollection(req, res) {
+  const name = req.swagger.params.name.value;
+
+  res.json({
+    name: name,
+    collectionSchema: {
+      id: "number",
+      itemName: "string",
+      price: "number"
+    },
+    size: 0
+  });
 }
