# snapdragon/dashboard-restapi/app.js
@@ -17,8 +17,4 @@ SwaggerRestify.create(config, function(err, swaggerRestify) {
 
   var port = process.env.PORT || 10010;
   app.listen(port);
-
-  if (swaggerRestify.runner.swagger.paths['/hello']) {
-    console.log('try this:\ncurl http://127.0.0.1:' + port + '/hello?name=Scott');
-  }
 });
